# rs-full-stack-project

./: README.md
db/: .env  Cargo.toml  course.sql
db/src/: main.rs
s1/http/src/: httprequest.rs  httpresponse.rs
s1/httpserver/: Cargo.toml
s1/httpserver/data/: orders.json
s1/httpserver/public/: 404.html  health.html  index.html
s1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
s1/src/: main.rs
s1/tcpclient/src/: main.rs
s1/tcpserver/src/: main.rs
ws/: .env  Cargo.toml
ws/wasm-client/: .gitignore  Cargo.toml  LICENSE_MIT
ws/wasm-client/src/: errors.rs  lib.rs
ws/wasm-client/src/models/: course.rs
ws/wasm-client/web-server/: index.html  index.js  package-lock.json  package.json
ws/webapp/: Cargo.toml
ws/webapp/src/: errors.rs  handlers.rs  routers.rs
ws/webapp/static/: register.html  teachers.html
ws/webapp/static/css/: register.css
ws/webservice/: Cargo.toml  tutorial.course.sql  tutorial.teacher.sql
ws/webservice/src/: errors.rs
ws/webservice/src/dbaccess/: course.rs  teacher.rs
ws/webservice/src/handlers/: course.rs  general.rs  teacher.rs
ws/webservice/src/models/: course.rs
